--- a/camera-settings.css
+++ b/camera-settings.css
@@ -6,3 +6,7 @@ h1 {
 p{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+footer {
+    font-size: 10pt;
+}
