--- a/docs/camera-settings.css
+++ b/docs/camera-settings.css
@@ -11,6 +11,11 @@ footer {
     font-size: 10pt;
 }
 
-/* .column {
+.column {
     float: left;
-} */
+}
+
+
+
+/* <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br> */
