--- a/docs/camera-settings.css
+++ b/docs/camera-settings.css
@@ -1,10 +1,16 @@
 h1 {
     text-align: center;
     font-family: 'Gravitas One', cursive;
+    font-size: 40px;
+}
+
+h4{
+    color: mediumblue;
 }
 
 p{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
+    color: mediumblue;
 }
 
 footer {
