--- a/docs/camera-settings.css
+++ b/docs/camera-settings.css
@@ -21,12 +21,11 @@ footer {
     float: left;
 }
 
-.lightingName.column{
-    column-count: 1;
-    /* column-fill: balance; */
-    /* column-gap: 100px; */
-}
-
+/* .lightingName .column {
+    column-count: 3;
+    column-fill: balance; 
+    column-gap: 100px;
+} */
 
 /* <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br> */
