changed blue background for h3 and paragraphs

--- a/docs/camera-settings.css
+++ b/docs/camera-settings.css
@@ -20,7 +20,7 @@ h2{
 }
 
 h3{
-    background-color: #31708e;
+    background-color: #5085a5;
     font-family: 'Open Sans Condensed', sans-serif;
     text-align: center;
     color: #eae7dc;
