--- a/docs/camera-settings.css
+++ b/docs/camera-settings.css
@@ -20,7 +20,8 @@ h2{
 }
 
 h3{
-    background-color: #5085a5;
+    background-color: #687864;
+    opacity: 0.5;
     font-family: 'Open Sans Condensed', sans-serif;
     text-align: center;
     color: #eae7dc;
