--- a/docs/camera-settings.css
+++ b/docs/camera-settings.css
@@ -21,7 +21,7 @@ h2{
 
 h3{
     background-color: #687864;
-    opacity: 0.5;
+    /* opacity: 0.8; */
     font-family: 'Open Sans Condensed', sans-serif;
     text-align: center;
     color: #eae7dc;
@@ -30,6 +30,7 @@ h3{
 h4{
     color: #31708e;
     font-family: 'Open Sans Condensed', sans-serif;
+
 }
 
 p{
