--- a/docs/camera-settings.css
+++ b/docs/camera-settings.css
@@ -5,7 +5,6 @@ body{
 
 h1 {
     text-align: center;
-    /* font-family: 'Gravitas One', cursive; */
     font-family: 'Open Sans Condensed', sans-serif;
     font-size: 40px;
     background-color:#eae7dc;
@@ -20,21 +19,24 @@ h2{
 
 h3{
     background-color: #687864;
-    /* opacity: 0.8; */
     font-family: 'Open Sans Condensed', sans-serif;
     text-align: center;
-    color: #eae7dc;
+    color: #f7f9fb;
 }
 
 h4{
     color: #31708e;
     font-family: 'Open Sans Condensed', sans-serif;
-
+    font-size: 18px;
 }
 
 p{
     font-family: 'Open Sans Condensed', sans-serif;
     font-size: 20px;
+}
+
+ul{
+    font-family: 'Open Sans Condensed', sans-serif;
 }
 
 footer {
